@@ -13,6 +13,7 @@ Changes 17.05.23
 - Removed progress block (Trello #1503)
 - Updated LangPacks
 - Updated report/coursequotas
+- Updated mod/rcontent
 
 
 Changes 17.04.24
